# membox

./: .env.example  .gitignore  README.md  mutagen.yml  pyproject.toml
.metadata/: 1717b714-5448-40d0-b07f-b11c3b176556.json  ba604a3a-59ef-425c-a997-2d473f55ae47.json  index.json
docs/: notes.md
front_end/: .gitignore  package-lock.json  package.json
front_end/src/: App.vue  style.css
kb/: chunking.py  cli.py  db.py  indexer.py  schema.sql  util.py
kb/commands/: index.py  search.py
mcore/: __init__.py  embedder.py  ingest_pdf.py  vector_store.py
mcore/preprocess/: pdfsplit.py
mcore/tools/: __init__.py  cli.py
mcore/tools/commands/: __init__.py  api.py  common.py  index.py  related.py  search.py
scripts/: membox-sync.sh
service/: __main__.py  app.py  deps.py  routes.py
tools/: cli.py
tools/commands/: related.py
